# krang-local-ai

./: .gitignore  LICENSE  README.md  TAURI_IMPLEMENTATION.md  TAURI_PLAN.md  index.html  package-lock.json  package.json  start.sh  tailwind.config.js  vite.config.js
scripts/: build-mac.sh
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ollama.rs
src/components/: ChatWindow.jsx  CodeBlock.jsx  ConfirmModal.jsx  ContextGauge.jsx  InputBar.jsx  KrangLogo.jsx  MessageBubble.jsx  ModelBrowser.jsx  ModelPicker.jsx  ParamsPopover.jsx  SettingsModal.jsx  Sidebar.jsx  SkillEditor.jsx  SkillPicker.jsx  StartupGate.jsx
src/lib/: fileSave.js  modelCatalog.js  modelDescriptions.js  ollama.js  params.js  platform.js  skills.js  themes.js  tokens.js
